--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <script type="text/javascript">
             var chatroom = window.Chatroom({
                 host: "http://localhost:5021",
-                title: "Chat with COLLEGE_BOT",
+                title: "COLLEGE_BOT",
                 fontFamily: 'Ubuntu',
                 container: document.querySelector(".chat-container"),
                 welcomeMessage: "Hi I am NHCE_BOT, I was developed by DIPESH SHRESTHA, I can Help you with many things",
